[gd_scene load_steps=3 format=2]

[ext_resource path="res://battle/camera/CameraController.gd" type="Script" id=1]
[ext_resource path="res://battle/camera/CameraInput.gd" type="Script" id=2]

[node name="Camera" type="Camera"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 3 )
script = ExtResource( 1 )
edge_size = 0.317

[node name="CameraInput" type="Node" parent="."]
script = ExtResource( 2 )
screen_edge_size = 0.001

[connection signal="on_change_action" from="CameraInput" to="." method="change_action"]
[connection signal="on_change_velocity" from="CameraInput" to="." method="change_velocity"]
[connection signal="on_rotate_view" from="CameraInput" to="." method="rotate_view"]
[connection signal="on_zoom" from="CameraInput" to="." method="zoom"]
